2020-05-28  Andy Buckley  <andy.buckley@cern.ch>

	* Separate caching of x and Q2 variables in the
	LogBicubicInterpolator: evidence suggests that these may be
	updated at very different rates.

2020-05-27  Andy Buckley  <andy.buckley@cern.ch>

	* Add simple caching to the LogBicubicInterpolator -- will cache
	contiguous calls of the same (x,Q). Credit to Dmitri Konstantinov
	and Grigorii Latyshev for the patch. Needs thread-safety
	work. Significant CPU savings in many contexts.

2019-12-17  Andy Buckley  <andy.buckley@cern.ch>

	* Add a Python mapping of the findFile() function.

2019-09-04  Andy Buckley  <andy.buckley@cern.ch>

	* Add convenience accessor attributes to PDFUncertainty in Python.

2019-08-14  Andy Buckley  <andy.buckley@cern.ch>

	* Fix lhapdf script handling of unknown index file and data
	directory paths. Thanks to Mateusz Ploskon.

2019-07-30  Andy Buckley  <andy.buckley@cern.ch>

	* Use ast abstract syntax tree standard module rather than yaml to
	parse metadata value strings in Python.

	* Make PDFInfo Python mapping inherit from Info.

	* Change annotation storage to be pure YAML format rather than
	hand-rolled approximation for limited types.

	* Upgrade bundled yaml-cpp to v0.6.0 to solve parsing issues with
	complex types (thanks to Zahari Kassabov.)

2019-07-08  Andy Buckley  <andy.buckley@cern.ch>

	* Actually delete the previous AlphaS object when calling PDF::setAlphaS().

2019-06-04  Graeme Watt  <graeme.watt@durham.ac.uk>

	* Modify lhapdf script to support Content-Length in HTTP header not
	given as a list so that file size is calculated correctly for CERN EOS.

2019-05-21  Andy Buckley  <andy.buckley@cern.ch>

	* Add a couple of extra trim() calls to path strings given to the Fortran API.

2019-05-11  Andy Buckley  <andy.buckley@cern.ch>

	* Apply lhapdf script improvement from Ivan Razumov / Genser.

2019-05-10  Andy Buckley  <andy.buckley@cern.ch>

	* Version 6.2.2!

2019-05-08  Andy Buckley  <andy.buckley@cern.ch>
